# pulse

./: .gitignore  API.md  Cargo.toml  README.md  docker-compose.yml  index.html  package-lock.json  package.json
migrations/: 20240912124527_second_schema.down.sql  20240912124527_second_schema.up.sql
src/: App.vue  config.rs  lib.rs  main.rs
src/assets/: main.css
src/auth/: auth.rs  claims.rs  mod.rs
src/components/UI/: AnonymousOption.vue  LoginOption.vue  NoOption.vue  RegisterOption.vue
src/components/layout/: MessageCard.vue  SignButton.vue
src/components/pages/: TheHome.vue  TheWelcome.vue
src/http/: auth.rs  error.rs  extractors.rs  mod.rs  user.rs
src/models/: user.rs
src/router/: index.ts
src/utils/: password.rs
src/views/: HomeView.vue  WelcomeView.vue
