[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "any",
    "postgres",
    "time",
    "uuid",
    "migrate",
    "tls-rustls-ring",
] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tokio-tungstenite = "0.24"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
rand = "0.8.5"
jsonwebtoken = "9.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.58"
dotenvy = "0.15.1"
thiserror = { version = "1.0.63" }
log = "0.4.14"

